# currency-cheat-sheet

./: .gitignore  README.md  TODO.md  hello.py  main.py  pdf_renderer.py  pyproject.toml
config/: currencies.json
static/: card.css
templates/: card.html
tests/: test_config.py  test_denominations.py  test_formatting.py  test_rates.py
walletcard/: config.py  converter.py  denominations.py  formatting.py  rates.py  renderer.py
